--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Workouter</string>
     <string name="add_set">Add set</string>
     <string name="exercise_name">Exercise Name</string>
+    <string name="finish">Finish</string>
 </resources>
